--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,26 @@ authors = [
     {name = "Nasy", email = "nasyxx+python@gmail.com"},
     {name = "Nasy", email = "nasyxx+dl@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "jax>=0.4.20",
+    "jaxlib>=0.4.20",
+    "numpy>=1.26.2",
+    "optax @ git+https://github.com/deepmind/optax.git",
+    "rich>=13.7.0",
+    "jaxtyping>=0.2.22",
+    "flax>=0.7.5",
+]
 requires-python = ">=3.11,<3.12"
 readme = "README.md"
 license = {text = "GPLv3"}
 
+[project.optional-dependencies]
+doc = [
+    "mkdocs-material>=9.4.14",
+    "mkdocs>=1.5.3",
+    "mike>=2.0.0",
+    "mkdocstrings[python]>=0.24.0",
+]
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
@@ -21,8 +36,13 @@ name = "jaxlib"
 verify_ssl = true
 type = "find_links"
 
+
+[tool.pdm.dev-dependencies]
+dev = [
+    "scipy>=1.11.4",
+    "scikit-learn>=1.3.2",
+]
 [tool.mypy]
-mypy_path = "./typings"
 exclude = [
   "__pypackages__/",
   "./typings",  # for pyright autogen stubs
