--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -18,6 +18,7 @@ jobs:
           architecture: "x64"
       - name: Install Dependencies
         run: |
+          touch README.md
           pip install -U .
           pdm install -G doc
 
