--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -12,13 +12,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: pre-setup
+        run: |
+          touch README.md
       - uses: actions/setup-python@v4
         with:
           python-version: 3.11
           architecture: "x64"
       - name: Install Dependencies
         run: |
-          touch README.md
           pip install -U .
           pdm install -G doc
 
