--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           python-version: 3.11
           architecture: "x64"
+      - uses: pdm-project/setup-pdm@v3
       - name: Install Dependencies
         run: |
           pip install -U .
