--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -22,8 +22,8 @@ jobs:
       - uses: pdm-project/setup-pdm@v3
       - name: Install Dependencies
         run: |
-          pip install -U .
-          pdm install -G doc
+          pdm install
+          pdm add -G doc
 
       - name: Build Documentation
         run: |
