--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -3,12 +3,18 @@ theme:
 site_name: nadl documents
 
 plugins:
+- search
+- mike
 - mkdocstrings:
     handlers:
       python:
         options:
           annotations_path: brief
+          docstring_style: google
 
 nav:
 - Home : index.md
 - API : api.md
+
+watch:
+- ../src
