--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ dependencies = [
     "numpy>=1.26.2",
     "rich>=13.7.0",
     "jaxtyping>=0.2.22",
-    "flax>=0.7.5",
     "optax>=0.1.7",
 ]
 requires-python = ">=3.11,<3.12"
@@ -132,7 +131,7 @@ section-order = ["future", "standard-library", "first-party", "tf", "torch", "ja
 database = ["lucene", "lupyne", "elasticsearch", "sqlite", "shelve"]
 tf = ["tensorflow", "keras"]
 torch = ["torch", "torchdata", "torchvision", "pytorch_lightning"]
-jax = ["jax", "haiku", "flax", "optax", "jraph", "chex", "jaxopt"]
+jax = ["jax", "haiku", "flax", "optax", "jraph", "chex", "jaxopt", "equinox", "orbax"]
 types = ["typing", "types", "jax.typing", "jaxtyping", "numpy.typing", "typing_extensions"]
 math = ["numpy", "scipy", "sklearn", "pandas"]
 config = ["config", "settings", "cfg", "smile_config", "tyro"]
