--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,20 +7,19 @@ authors = [
     {name = "Nasy", email = "nasyxx+dl@gmail.com"},
 ]
 dependencies = [
-    "jax>=0.4.20",
-    "jaxlib>=0.4.20",
+    "jax>=0.4.23",
     "numpy>=1.26.2",
     "rich>=13.7.0",
-    "jaxtyping>=0.2.22",
+    "jaxtyping>=0.2.25",
     "optax>=0.1.7",
 ]
-requires-python = ">=3.11,<3.12"
+requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "GPLv3"}
 
 [project.optional-dependencies]
 doc = [
-    "mkdocs-material>=9.4.14",
+    "mkdocs-material>=9.5.2",
     "mkdocs>=1.5.3",
     "mike>=2.0.0",
     "mkdocstrings[python]>=0.24.0",
