--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,28 +5,35 @@ description = "Nasy's Deep Learning Toolkit"
 authors = [
     {name = "Nasy", email = "nasyxx+python@gmail.com"},
     {name = "Nasy", email = "nasyxx+dl@gmail.com"},
+    {name = "Nasy", email = "nasyxx+git@gmail.com"},
 ]
 dependencies = [
-    "jax>=0.4.23",
-    "numpy>=1.26.2",
-    "rich>=13.7.0",
-    "jaxtyping>=0.2.25",
-    "optax>=0.1.7",
+    "jax>=0.4.26",
+    "numpy>=1.26.4",
+    "rich>=13.7.1",
+    "jaxtyping>=0.2.28",
+    "optax>=0.2.2",
+    "equinox>=0.11.4",
 ]
-requires-python = ">=3.11"
-readme = "README.md"
+requires-python = ">=3.12,<3.13"
+readme = {content-type = "text/plain", file="readme.org"}
 license = {text = "GPLv3"}
+version = "0.1.0"
 
 [project.optional-dependencies]
 doc = [
-    "mkdocs-material>=9.5.2",
+    "mkdocs-material>=9.5.18",
     "mkdocs>=1.5.3",
     "mike>=2.0.0",
-    "mkdocstrings[python]>=0.24.0",
+    "mkdocstrings[python]>=0.24.3",
 ]
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
+
+[tool.pdm]
+distribution = true
+version = { source = "file", path = "src/nadl/__init__.py" }
 
 [[tool.pdm.source]]
 url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
@@ -34,19 +41,16 @@ name = "jaxlib"
 verify_ssl = true
 type = "find_links"
 
-[tool.pdm]
-version = { source = "file", path = "src/nadl/__init__.py" }
-
 [tool.pdm.dev-dependencies]
 dev = [
-    "scipy>=1.11.4",
-    "scikit-learn>=1.3.2",
+    "scipy>=1.13.0",
+    "scikit-learn>=1.4.2",
     "ipdb>=0.13.13",
 ]
 [tool.mypy]
 exclude = [
-  "__pypackages__/",
-  "./typings",  # for pyright autogen stubs
+    "__pypackages__/",
+    "./typings",  # for pyright autogen stubs
 ]
 
 follow_imports_for_stubs = true
@@ -70,7 +74,7 @@ strict_optional = true
 
 
 warn_redundant_casts = true
-warn_unused_ignores = false
+warn_unused_ignores = true
 warn_no_return = false
 warn_return_any = false
 warn_unreachable = true
@@ -85,15 +89,14 @@ strict_equality = true
 strict = true
 
 warn_unused_configs = true
+mypy_path = "./typings"
 
 [tool.pyright]
-pythonVersion = "3.11"
+pythonVersion = "3.12"
 extraPaths = [
-  "__pypackages__/3.9/lib",
-  "__pypackages__/3.10/lib",
-  "__pypackages__/3.11/lib",
-  "__pypackages__/3.12/lib",
-  "src",
+    "__pypackages__/3.12/lib",
+    "src",
+    "__pypackages__/3.11/lib",
 ]
 
 exclude = [
@@ -102,31 +105,40 @@ exclude = [
 
 useLibraryCodeForTypes = true
 
-
 [tool.ruff]
-
+cache-dir = "~/.cache/ruff"
 exclude = [ "./typings" ]
-
-fix = false
-unfixable = ["F401", "F841", "C417"]
+indent-width = 2
+line-length = 88
 output-format = "grouped"
-# show-source = true
+preview = true
+show-fixes = true
+unsafe-fixes = true
 
-select = ["ALL"]
+[tool.ruff.format]
+docstring-code-format = true
+preview = true
+
+[tool.ruff.lint]
 ignore = [
-  "ANN101", "C417", "COM812", "D203", "D213", "E401",
+  "ANN101", "C417", "COM812", "D203", "D213", "D401", "E111", "E114", "E401",
   "FBT002", "EM102", "ERA001", "EXE001", "FBT001",
   "I001", "PD", "S101", "SLF001", "TRY003", "UP009",
   "EM101", "T201", "PGH003", "ISC001"
 ]
+preview = true
+select = ["ALL"]
 
-indent-width = 2
-# show-fixes = true
+unfixable = [
+  "F401",  # unused imports
+  "F841",  # unused variables
+  "C417"   # map
+]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 section-order = ["future", "standard-library", "first-party", "tf", "torch", "jax", "types", "math", "database", "third-party", "config", "local-folder"]
 
-[tool.ruff.isort.sections]
+[tool.ruff.lint.isort.sections]
 database = ["lucene", "lupyne", "elasticsearch", "sqlite", "shelve"]
 tf = ["tensorflow", "keras"]
 torch = ["torch", "torchdata", "torchvision", "pytorch_lightning"]
@@ -135,23 +147,14 @@ types = ["typing", "types", "jax.typing", "jaxtyping", "numpy.typing", "typing_e
 math = ["numpy", "scipy", "sklearn", "pandas"]
 config = ["config", "settings", "cfg", "smile_config", "tyro"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = [ "D104" ]
 "__version__.py" = [ "D100" ]
 "sites/*.py" = [ "INP001" ]
 
-[tool.ruff.pylint]
+[tool.ruff.lint.pylint]
 max-args = 10
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Flag errors (`C901`) whenever the complexity level exceeds 15.
 max-complexity = 15
-
-[tool.pyink]
-pyink_indentation = 2
-preview = true
-
-[tool.yapf]
-based_on_style = "yapf"
-column_limit = 88
-allow_multiline_lambdas = true
