--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,10 @@ dependencies = [
     "jaxtyping>=0.2.28",
     "optax>=0.2.2",
     "equinox>=0.11.4",
+    "beartype>=0.18.5",
+    "scikit-image>=0.23.2",
 ]
-requires-python = ">=3.12,<3.13"
+requires-python = ">=3.11"
 readme = {content-type = "text/plain", file="readme.org"}
 license = {text = "GPLv3"}
 
@@ -91,7 +93,7 @@ warn_unused_configs = true
 mypy_path = "./typings"
 
 [tool.pyright]
-pythonVersion = "3.12"
+pythonVersion = "3.11"
 extraPaths = [
     "__pypackages__/3.12/lib",
     "src",
@@ -103,57 +105,3 @@ exclude = [
 ]
 
 useLibraryCodeForTypes = true
-
-[tool.ruff]
-cache-dir = "~/.cache/ruff"
-exclude = [ "./typings" ]
-indent-width = 2
-line-length = 88
-output-format = "grouped"
-preview = true
-show-fixes = true
-unsafe-fixes = true
-
-[tool.ruff.format]
-docstring-code-format = true
-preview = true
-
-[tool.ruff.lint]
-ignore = [
-  "ANN101", "C417", "COM812", "D203", "D213", "D401", "E111", "E114", "E401",
-  "FBT002", "EM102", "ERA001", "EXE001", "FBT001",
-  "I001", "PD", "S101", "SLF001", "TRY003", "UP009",
-  "EM101", "T201", "PGH003", "ISC001"
-]
-preview = true
-select = ["ALL"]
-
-unfixable = [
-  "F401",  # unused imports
-  "F841",  # unused variables
-  "C417"   # map
-]
-
-[tool.ruff.lint.isort]
-section-order = ["future", "standard-library", "first-party", "tf", "torch", "jax", "types", "math", "database", "third-party", "config", "local-folder"]
-
-[tool.ruff.lint.isort.sections]
-database = ["lucene", "lupyne", "elasticsearch", "sqlite", "shelve"]
-tf = ["tensorflow", "keras"]
-torch = ["torch", "torchdata", "torchvision", "pytorch_lightning"]
-jax = ["jax", "haiku", "flax", "optax", "jraph", "chex", "jaxopt", "equinox", "orbax"]
-types = ["typing", "types", "jax.typing", "jaxtyping", "numpy.typing", "typing_extensions"]
-math = ["numpy", "scipy", "sklearn", "pandas"]
-config = ["config", "settings", "cfg", "smile_config", "tyro"]
-
-[tool.ruff.lint.per-file-ignores]
-"__init__.py" = [ "D104" ]
-"__version__.py" = [ "D100" ]
-"sites/*.py" = [ "INP001" ]
-
-[tool.ruff.lint.pylint]
-max-args = 10
-
-[tool.ruff.lint.mccabe]
-# Flag errors (`C901`) whenever the complexity level exceeds 15.
-max-complexity = 15
