--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "equinox>=0.11.4",
     "beartype>=0.18.5",
     "scikit-image>=0.23.2",
+    "orbax-checkpoint>=0.5.11",
 ]
 requires-python = ">=3.12"
 readme = {content-type = "text/plain", file="readme.org"}
