--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "beartype>=0.18.5",
     "scikit-image>=0.23.2",
     "orbax-checkpoint>=0.5.14",
+    "scikit-learn>=1.5.0",
 ]
 requires-python = ">=3.12"
 readme = {content-type = "text/plain", file="readme.org"}
