--- a/ruff.toml
+++ b/ruff.toml
@@ -16,7 +16,7 @@ preview = true
 ignore = [
   "ANN101", "C417", "COM812", "CPY001", "D203", "D213", "D401",
   "E111", "E114", "E401", "EM101", "EM102", "ERA001", "EXE001",
-  "FA102", "FBT002", "FBT001",
+  "F722", "FA102", "FBT002", "FBT001",
   "I001", "PD", "PYI042",
   "S101", "SLF001", "TRY003", "UP009",
   "T201", "PGH003", "ISC001"
