Move tensorflow/pytorch to mac only

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,10 @@ doc = [
     "mike>=2.1.1",
     "mkdocstrings[python]>=0.25.1",
 ]
+mac = [
+    "torch>=2.3.1; sys_platform == \"darwin\"",
+    "tensorflow>=2.16.1; sys_platform == \"darwin\"",
+]
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
@@ -51,8 +55,6 @@ dev = [
     "scikit-learn>=1.5.0",
     "ipdb>=0.13.13",
     "naipyext[all]>=0.10.0",
-    "torch>=2.3.1",
-    "tensorflow>=2.16.1",
     "tensordict>=0.4.0",
     "dm-tree>=0.1.8",
     "optree>=0.11.0",
