--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ doc = [
 mac = [
     "torch>=2.3.1; sys_platform == \"darwin\"",
     "tensorflow>=2.16.1; sys_platform == \"darwin\"",
+    "tensordict>=0.4.0; sys_platform == \"darwin\"",
 ]
 [build-system]
 requires = ["pdm-backend"]
@@ -55,7 +56,6 @@ dev = [
     "scikit-learn>=1.5.0",
     "ipdb>=0.13.13",
     "naipyext[all]>=0.10.0",
-    "tensordict>=0.4.0",
     "dm-tree>=0.1.8",
     "optree>=0.11.0",
 ]
