--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,17 +8,18 @@ authors = [
     {name = "Nasy", email = "nasyxx+git@gmail.com"},
 ]
 dependencies = [
-    "jax>=0.4.28",
+    "jax>=0.4.31",
     "numpy>=1.26.4",
-    "rich>=13.7.1",
-    "jaxtyping>=0.2.30",
-    "optax>=0.2.2",
-    "equinox>=0.11.4",
+    "rich>=13.8.0",
+    "jaxtyping>=0.2.33",
+    "optax>=0.2.3",
+    "equinox>=0.11.5",
     "beartype>=0.18.5",
-    "scikit-image>=0.23.2",
-    "orbax-checkpoint>=0.5.16",
-    "scikit-learn>=1.5.0",
+    "scikit-image>=0.24.0",
+    "orbax-checkpoint>=0.6.1",
+    "scikit-learn>=1.5.1",
     "einops>=0.8.0",
+    "haliax>=1.3",
 ]
 requires-python = ">=3.12"
 readme = {content-type = "text/plain", file="readme.org"}
@@ -26,15 +27,15 @@ license = {text = "GPLv3"}
 
 [project.optional-dependencies]
 doc = [
-    "mkdocs-material>=9.5.27",
-    "mkdocs>=1.6.0",
-    "mike>=2.1.1",
-    "mkdocstrings[python]>=0.25.1",
+    "mkdocs-material>=9.5.33",
+    "mkdocs>=1.6.1",
+    "mike>=2.1.3",
+    "mkdocstrings[python]>=0.25.2",
 ]
 mac = [
-    "torch>=2.3.1; sys_platform == \"darwin\"",
-    "tensorflow>=2.16.1; sys_platform == \"darwin\"",
-    "tensordict>=0.4.0; sys_platform == \"darwin\"",
+    "torch>=2.4.0; sys_platform == \"darwin\"",
+    "tensorflow>=2.17.0; sys_platform == \"darwin\"",
+    "tensordict>=0.5.0; sys_platform == \"darwin\"",
 ]
 [build-system]
 requires = ["pdm-backend"]
@@ -44,20 +45,14 @@ build-backend = "pdm.backend"
 distribution = true
 version = { source = "file", path = "src/nadl/__init__.py" }
 
-[[tool.pdm.source]]
-url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
-name = "jaxlib"
-verify_ssl = true
-type = "find_links"
-
 [tool.pdm.dev-dependencies]
 dev = [
-    "scipy>=1.13.1",
-    "scikit-learn>=1.5.0",
+    "scipy>=1.14.1",
+    "scikit-learn>=1.5.1",
     "ipdb>=0.13.13",
     "naipyext[all]>=0.10.0",
     "dm-tree>=0.1.8",
-    "optree>=0.11.0",
+    "optree>=0.12.1",
 ]
 [tool.mypy]
 exclude = [
