--- a/ruff.toml
+++ b/ruff.toml
@@ -14,7 +14,7 @@ preview = true
 
 [lint]
 ignore = [
-  "ANN101", "C417", "COM812", "CPY001", "D203", "D213", "D401", "DOC201", "DOC501",
+  "ANN101", "C417", "COM812", "CPY001", "D203", "D213", "D401", "DOC201", "DOC402", "DOC501",
   "E111", "E114", "E401", "EM101", "EM102", "ERA001", "EXE001",
   "F722", "FA102", "FBT002", "FBT001",
   "I001", "PD", "PYI042",
